--- a/client/src/components/createRoom/CreateRoom.css
+++ b/client/src/components/createRoom/CreateRoom.css
@@ -2,19 +2,31 @@
    padding: 10px !important;
    width: 25px;
    height: 40px;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
-   justify-content: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
 }
 
 .create-room-form {
+   display: -ms-grid;
    display: grid;
+   -ms-grid-columns: 200px auto;
    grid-template-columns: 200px auto;
-   align-items: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    grid-row-gap: 20px;
 }
 
 .create-room-form > button {
+   -ms-grid-column: 1;
+   -ms-grid-column-span: 2;
    grid-column: 1/3;
    font-size: 20px;
 }
@@ -28,16 +40,26 @@
 }
 
 .create-room-form > div {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
 }
 
 .create-room-form > div > div {
    height: 38px;
    width: 20px;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
-   justify-content: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
    background-color: #fcf3d7;
    border-top: 1px solid #808080;
    border-bottom: 1px solid #808080;
@@ -58,17 +80,27 @@
 }
 
 .create-room-heading {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    padding-bottom: 10px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
 }
 
 .create-room-heading > a {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
-   justify-content: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
    padding: 10px 10px;
    height: 100%;
    margin-right: 10px;
