--- a/client/src/components/room/Room.css
+++ b/client/src/components/room/Room.css
@@ -1,7 +1,13 @@
 .room-container {
+    display: -ms-grid;
     display: grid;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-grid-columns: 40% (1fr)[2] auto;
     grid-template-columns: 40% repeat(2, 1fr) auto;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
