--- a/client/src/components/roomSelection/RoomSelection.css
+++ b/client/src/components/roomSelection/RoomSelection.css
@@ -1,30 +1,39 @@
 .game-selection-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    margin-bottom: 20px;
-  }
-  
-  .game-selection-header > h1{
-    margin: 0;
-  }
-  
-  .button-style{
-    height: 40px;
-    border: none;
-    padding: 10px 30px;
-    border-radius: 10px;
-    background-color: #FCF3D7;
-    border: 1px solid #808080;
-    transition: 100ms;
-    color: black;
-    text-decoration: none;
-    height: auto;
-  }
-  
-  .button-style:hover{
-    box-shadow: 0 0 2px rgba(0, 0, 0, .2);
-    cursor: pointer;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  margin-bottom: 20px;
+}
+
+.game-selection-header > h1{
+  margin: 0;
+}
+
+.button-style{
+  height: 40px;
+  border: none;
+  padding: 10px 30px;
+  border-radius: 10px;
+  background-color: #FCF3D7;
+  border: 1px solid #808080;
+  -webkit-transition: 100ms;
+  -o-transition: 100ms;
+  transition: 100ms;
+  color: black;
+  text-decoration: none;
+  height: auto;
+}
+
+.button-style:hover{
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+          box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+  cursor: pointer;
+}
